tests/ui/borrowck/borrowck-match-binding-is-assignment.stderr
error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:14:13
   |
LL |         x => {
   |         - first assignment to `x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
LL |         mut x => {
   |         +++
help: to modify the original value, take a borrow instead
   |
LL |         ref mut x => {
   |         +++++++

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:20:13
   |
LL |         E::Foo(x) => {
   |                - first assignment to `x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
LL |         E::Foo(mut x) => {
   |                +++
help: to modify the original value, take a borrow instead
   |
LL |         E::Foo(ref mut x) => {
   |                +++++++

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:26:13
   |
LL |         S { bar: x } => {
   |                  - first assignment to `x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
LL |         S { bar: mut x } => {
   |                  +++
help: to modify the original value, take a borrow instead
   |
LL |         S { bar: ref mut x } => {
   |                  +++++++

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:32:13
   |
LL |         (x,) => {
   |          - first assignment to `x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
LL |         (mut x,) => {
   |          +++
help: to modify the original value, take a borrow instead
   |
LL |         (ref mut x,) => {
   |          +++++++

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:38:13
   |
LL |         [x,_,_] => {
   |          - first assignment to `x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
LL |         [mut x,_,_] => {
   |          +++
help: to modify the original value, take a borrow instead
   |
LL |         [ref mut x,_,_] => {
   |          +++++++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0384`.
